[KLT] Moved runtime support for pThread, OpenCL and CUDA from TileK to KLT

--- a/projects/TileK/Makefile.am
+++ b/projects/TileK/Makefile.am
@@ -1,14 +1,13 @@
 
 SUBDIRS= \
+  tests/rtl/host \
+  tests/rtl/threads \
+  tests/rtl/opencl \
   include/DLX/TileK \
   include/RTL/Host \
   include/RTL/Kernel/OpenCL \
   include/RTL/Kernel/CUDA \
   lib \
   src \
-  tests/rtl \
-  tests/basic \
-  tests/threads \
-  tests/accelerator \
   doc
 
