[KLT] Compiler and Runtime work and are tested in [TileK]

--- a/projects/TileK/Makefile.am
+++ b/projects/TileK/Makefile.am
@@ -3,6 +3,9 @@ SUBDIRS= \
   tests/rtl/host \
   tests/rtl/threads \
   tests/rtl/opencl \
+  tests/tilek/host \
+  tests/tilek/threads \
+  tests/tilek/opencl \
   include/DLX/TileK \
   include/RTL/Host \
   include/RTL/Kernel/OpenCL \
