--- a/src/midend/KLT/lib/mdcg/Makefile.am
+++ b/src/midend/KLT/lib/mdcg/Makefile.am
@@ -3,10 +3,12 @@ include $(top_srcdir)/config/Makefile.for.ROSE.includes.and.libs
 
 lib_LTLIBRARIES=libKLT-MDCG.la
 
+cxxflags=-g -DVERBOSE=1 -O0
+
 libKLT_MDCG_la_SOURCES= \
   static-initializer.cpp
 libKLT_MDCG_la_CXXFLAGS= \
-  -g -O2 \
+  $(cxxflags) \
   -I$(top_srcdir)/src/midend/MFB/include \
   -I$(top_srcdir)/src/midend/MDCG/include \
   -I$(top_srcdir)/src/midend/KLT/include \
