--- a/src/midend/MDCG/lib/tools/Makefile.am
+++ b/src/midend/MDCG/lib/tools/Makefile.am
@@ -3,12 +3,14 @@ include $(top_srcdir)/config/Makefile.for.ROSE.includes.and.libs
 
 lib_LTLIBRARIES=libMDCG-Tools.la
 
+cxxflags=-g -DVERBOSE=1 -O0
+
 libMDCG_Tools_la_SOURCES= \
   model-builder.cpp \
   static-initializer.cpp \
   api.cpp
 libMDCG_Tools_la_CXXFLAGS= \
-  -g \
+  $(cxxflags) \
   -I$(top_srcdir)/src/midend/MDCG/include \
   -I$(top_srcdir)/src/midend/MFB/include \
   $(ROSE_INCLUDES)
