--- a/src/midend/MFB/lib/sage/Makefile.am
+++ b/src/midend/MFB/lib/sage/Makefile.am
@@ -3,6 +3,8 @@ include $(top_srcdir)/config/Makefile.for.ROSE.includes.and.libs
 
 lib_LTLIBRARIES=libMFB-Sage.la
 
+cxxflags=-g -DVERBOSE=1 -O0
+
 libMFB_Sage_la_SOURCES= \
   driver.cpp \
   function-declaration.cpp \
@@ -12,6 +14,7 @@ libMFB_Sage_la_SOURCES= \
   namespace-declaration.cpp \
   api.cpp
 libMFB_Sage_la_CXXFLAGS= \
-  -g -I$(srcdir)/../../include \
+  $(cxxflags) \
+  -I$(srcdir)/../../include \
   $(ROSE_INCLUDES)
 
