--- a/src/midend/MFB/lib/utils/Makefile.am
+++ b/src/midend/MFB/lib/utils/Makefile.am
@@ -3,9 +3,12 @@ include $(top_srcdir)/config/Makefile.for.ROSE.includes.and.libs
 
 lib_LTLIBRARIES=libMFB-Utils.la
 
+cxxflags=-g -DVERBOSE=1 -O0
+
 libMFB_Utils_la_SOURCES= \
   utils.cpp
 libMFB_Utils_la_CXXFLAGS= \
-  -g -I$(top_srcdir)/src/midend/MFB/include \
+  $(cxxflags) \
+  -I$(top_srcdir)/src/midend/MFB/include \
   $(ROSE_INCLUDES)
 
