[KLT] Generate JSON with loops & tiles bounds.

--- a/projects/TileK/tests/rtl/opencl/Makefile.am
+++ b/projects/TileK/tests/rtl/opencl/Makefile.am
@@ -13,7 +13,7 @@ KLT_RTL=$(top_builddir)/$(KLT_REL_PATH)/lib/rtl/libKLT-RTL-OpenCL.la
 
 ###################################################################################################
 
-C_FLAGS=-O0 -g -I$(KLT_INC)
+C_FLAGS=-O0 -g -I$(KLT_INC) -I$(srcdir)/../..
 LD_FLAGS=-lrt $(KLT_RTL) -lOpenCL
 
 ###################################################################################################
