--- a/src/midend/KLT/lib/rtl/Makefile.am
+++ b/src/midend/KLT/lib/rtl/Makefile.am
@@ -21,12 +21,13 @@ libKLT_RTL_Host_la_CFLAGS=$(KLT_RTL_cflags)
 libKLT_RTL_Threads_la_SOURCES=$(KLT_RTL_sources)
 libKLT_RTL_Threads_la_CFLAGS=$(KLT_RTL_cflags) -DKLT_THREADS_ENABLED=1
 
+if ROSE_HAVE_OPENCL_INC
 libKLT_RTL_OpenCL_la_SOURCES=$(KLT_RTL_sources) opencl-utils.c
-libKLT_RTL_OpenCL_la_CFLAGS=$(KLT_RTL_cflags) -DKLT_OPENCL_ENABLED=1
+libKLT_RTL_OpenCL_la_CFLAGS=$(KLT_RTL_cflags) -I@OPENCL_INC_DIR@ -DKLT_OPENCL_ENABLED=1
+endif
 
+if ROSE_HAVE_OPENCL_INC
 libKLT_RTL_la_SOURCES=$(KLT_RTL_sources) opencl-utils.c
-libKLT_RTL_la_CFLAGS=$(KLT_RTL_cflags) -DKLT_THREADS_ENABLED=1 -DKLT_OPENCL_ENABLED=1
-
-
-
+libKLT_RTL_la_CFLAGS=$(KLT_RTL_cflags) -I@OPENCL_INC_DIR@ -DKLT_THREADS_ENABLED=1 -DKLT_OPENCL_ENABLED=1
+endif
 
