--- a/projects/TileK/tests/tilek/threads/Makefile.am
+++ b/projects/TileK/tests/tilek/threads/Makefile.am
@@ -21,6 +21,8 @@ KLT_INC=$(top_srcdir)/$(KLT_REL_PATH)/include
 
 KLT_RTL=$(top_builddir)/$(KLT_REL_PATH)/lib/rtl/libKLT-RTL-Threads.la
 
+tilek_rc=$(builddir)/../../../tilek.rc
+
 ###################################################################################################
 
 ROSE_FLAGS= # -DSKIP_ROSE_BUILTIN_DECLARATIONS
@@ -52,7 +54,7 @@ test_0: rose_test_0.o test_0-host-kernel.o test_0-threads-kernel.o test_0-static
 	libtool --mode=link gcc rose_test_0.o test_0-host-kernel.o test_0-threads-kernel.o test_0-static.o $(LD_FLAGS) -o test_0
 
 check-test_0: test_0
-	./test_0
+	source $(tilek_rc) ; ./test_0
 
 clean-test_0:
 	rm -f test_0-host-kernel.c test_0-threads-kernel.c rose_test_0.c test_0-static.c
@@ -83,7 +85,7 @@ test_1: rose_test_1.o test_1-host-kernel.o test_1-threads-kernel.o test_1-static
 	libtool --mode=link gcc rose_test_1.o test_1-host-kernel.o test_1-threads-kernel.o test_1-static.o $(LD_FLAGS) -o test_1
 
 check-test_1: test_1
-	./test_1
+	source $(tilek_rc) ; ./test_1
 
 clean-test_1:
 	rm -f test_1-host-kernel.c test_1-threads-kernel.c rose_test_1.c test_1-static.c
