[TileK] Fixed LD paths.

--- a/projects/TileK/Makefile.am
+++ b/projects/TileK/Makefile.am
@@ -11,7 +11,7 @@ SUBDIRS+=lib src
 
 # KLT Runtime Tests
 
-SUBDIRS+=tests/rtl/host tests/rtl/threads
+SUBDIRS+=tests/rtl/tools tests/rtl/host tests/rtl/threads
 if ROSE_HAVE_OPENCL_INC
   SUBDIRS+=tests/rtl/opencl
 endif
