--- a/projects/TileK/tests/tilek/host/Makefile.am
+++ b/projects/TileK/tests/tilek/host/Makefile.am
@@ -26,9 +26,11 @@ tilek_rc=$(builddir)/../../../tilek.rc
 ###################################################################################################
 
 ROSE_FLAGS= # -DSKIP_ROSE_BUILTIN_DECLARATIONS
-TILEK_FLAGS=-I$(KLT_INC) -I$(srcdir)/../..
+TILEK_FLAGS=--tilek-target=threads -I$(KLT_INC) -I$(srcdir)/../..
+
 C_FLAGS=-O0 -g -I$(KLT_INC) -I$(srcdir)/../..
-LD_FLAGS=-lrt $(KLT_RTL)
+LD_FLAGS=
+EXTRA_LIBS= $(KLT_RTL) -lrt
 
 ###################################################################################################
 
@@ -47,7 +49,7 @@ test_0-static.o: test_0-static.c
 	gcc $(C_FLAGS) -c test_0-static.c -o test_0-static.o
 
 test_0: rose_test_0.o test_0-host-kernel.o test_0-static.o $(KLT_RTL)
-	libtool --mode=link gcc rose_test_0.o test_0-host-kernel.o test_0-static.o $(LD_FLAGS) -o test_0
+	libtool --mode=link gcc $(LD_FLAGS) rose_test_0.o test_0-host-kernel.o test_0-static.o $(EXTRA_LIBS) -o test_0
 
 check-test_0: test_0
 	source $(tilek_rc) ; ./test_0
@@ -84,7 +86,7 @@ test_1-static.o: test_1-static.c
 	gcc $(C_FLAGS) -c test_1-static.c -o test_1-static.o
 
 test_1: rose_test_1.o test_1-host-kernel.o test_1-static.o $(KLT_RTL)
-	libtool --mode=link gcc rose_test_1.o test_1-host-kernel.o test_1-static.o $(LD_FLAGS) -o test_1
+	libtool --mode=link gcc $(LD_FLAGS) rose_test_1.o test_1-host-kernel.o test_1-static.o $(EXTRA_LIBS) -o test_1
 
 check-test_1: test_1
 	source $(tilek_rc) ; ./test_1
@@ -92,7 +94,7 @@ check-test_1: test_1
 ##################################
 
 dump_test_1: klt-dump-static.o test_1-host-kernel.o test_1-static.o $(KLT_RTL)
-	libtool --mode=link gcc klt-dump-static.o test_1-host-kernel.o test_1-static.o $(LD_FLAGS) -o dump_test_1
+	libtool --mode=link gcc $(LD_FLAGS) klt-dump-static.o test_1-host-kernel.o test_1-static.o $(EXTRA_LIBS) -o dump_test_1
 
 check-dump_test_1: dump_test_1
 	./dump_test_1
@@ -121,7 +123,7 @@ test_2-static.o: test_2-static.c
 	gcc $(C_FLAGS) -c test_2-static.c -o test_2-static.o
 
 test_2: rose_test_2.o test_2-host-kernel.o test_2-static.o $(KLT_RTL)
-	libtool --mode=link gcc rose_test_2.o test_2-host-kernel.o test_2-static.o $(LD_FLAGS) -o test_2
+	libtool --mode=link gcc $(LD_FLAGS) rose_test_2.o test_2-host-kernel.o test_2-static.o $(EXTRA_LIBS) -o test_2
 
 check-test_2: test_2
 	source $(tilek_rc) ; ./test_2
@@ -129,7 +131,7 @@ check-test_2: test_2
 ##################################
 
 dump_test_2: klt-dump-static.o test_2-host-kernel.o test_2-static.o $(KLT_RTL)
-	libtool --mode=link gcc klt-dump-static.o test_2-host-kernel.o test_2-static.o $(LD_FLAGS) -o dump_test_2
+	libtool --mode=link gcc $(LD_FLAGS) klt-dump-static.o test_2-host-kernel.o test_2-static.o $(EXTRA_LIBS) -o dump_test_2
 
 check-dump_test_2: dump_test_2
 	./dump_test_2
